# DL_Clasification_Project

./: README.md  params.yaml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  template.py
research/: st_01.ipynb  st_02.ipynb  trails.ipynb
src/deepClaffier/components/: __init__.py  data_ingestion.py
src/deepClaffier/config/: __init__.py  configuration.py
src/deepClaffier/entity/: __init__.py
src/deepClaffier/pipeline/: stage_01_data_ingestion.py
src/deepClaffier/utils/: __init__.py  common.py
tests/unit/: test_utils.py
