[metadata]
license =MIT
license_file=LICENSE 
classifier=

    programming language :: python  :: 3.8
    operating system :: OS Independent

[options]
install_requires = 
    ensure==1.0.2
python_requires = >=3.7

[options.extras_require]
testing=
    pytest>=7.1.3
    mypy>=0.971
    flake8>=5.0.4  #to test any mistakes like extra spaces given 
    tox>=3.25.1   # to test different working environments
    black>=22.8.0

[options.package_data]
deepClaffier = py.typed

[flaked8]
max-line-length = 160
exclude = __init__.py
